New updates for monster mash

--- a/monstermash.html
+++ b/monstermash.html
@@ -34,7 +34,7 @@
             Replay Intro
         </button>
         
-        <div class="d-flex justify-content-center my-5">
+        <div class="d-flex justify-content-center my-4">
             <div class="video-container">
                 <video id="main-video" preload autoplay muted style="pointer-events: none;" disablePictureInPicture>
                     <source src="assets/media/monstermash/welcome.mp4" type="video/mp4">
@@ -58,36 +58,37 @@
                 <img id="menu-title" src="assets/images/monstermash/title.png"/>
             </div>
 
-            <div class="row justify-content-around">
+            <div class="row justify-content-between">
 
-                <div class="col-md-2 my-2">
+                <div class="col-md-4 my-3 d-flex justify-content-center">
                     <button id="week1" class="btn btn-weeks">
                         <!-- <img src="assets/images/monstermash/WEEK1.png"/> -->
-                        Event 1
+                        Animations for Games 101
                     </button>
                 </div>
 
-                <div class="col-md-2 my-2">
+                <div class="col-md-4 my-3 d-flex justify-content-center">
                     <button id="week2" class="btn btn-weeks">
                         <!-- <img src="assets/images/monstermash/WEEK2.png"/> -->
-                        Event 2
+                        Games Industry Info
                     </button>
                 </div>
+            </div>
 
-                <div class="col-md-2 my-2">
+            <div class="row justify-content-between">
+                <div class="col-md-4 my-3 d-flex justify-content-center">
                     <button id="week3" class="btn btn-weeks">
                         <!-- <img src="assets/images/monstermash/WEEK3.png"/> -->
-                        Event 3
+                        Spooky Social
                     </button>
                 </div>
 
-                <div class="col-md-2 my-2">
+                <div class="col-md-4 my-3 d-flex justify-content-center">
                     <button id="week4" class="btn btn-weeks">
                         <!-- <img src="assets/images/monstermash/WEEK4.png"/> -->
-                        Event 4
+                        Game Jam
                     </button>
                 </div>
-                
             </div>
         </div>
 
