Monster mash has skip button available now

--- a/monstermash.html
+++ b/monstermash.html
@@ -30,8 +30,8 @@
 
     <div style="position: absolute; width: 100%; height: 100%;">
 
-        <button id="replay-intro" class="btn btn-hide btn-extra mx-1 mt-1">
-            Replay Intro
+        <button id="replay-intro" class="btn btn-extra mx-1 mt-1">
+            Skip Intro
         </button>
         
         <div class="d-flex justify-content-center my-4">
