Updated monster mash and with new links

--- a/monstermash.html
+++ b/monstermash.html
@@ -14,9 +14,6 @@
 
     <!-- Custom Stylesheet stuff -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <link rel="stylesheet" href="assets/css/navbar.css"/>
-    <link rel="stylesheet" href="assets/css/responsive.css"/>
     <link rel="stylesheet" href="assets/css/monstermash.css"/>
 
     <!-- Animejs -->
@@ -30,9 +27,23 @@
 
     <div style="position: absolute; width: 100%; height: 100%;">
 
-        <button id="replay-intro" class="btn btn-extra mx-1 mt-1">
-            Skip Intro
-        </button>
+        <div class="d-flex mx-1 mt-1">
+            <div>
+                <button id="replay-intro" class="btn btn-extra">
+                    Skip Intro
+                </button>
+            </div>
+
+            <div class="ms-auto">
+                <button class="btn btn-extra btn-disable btn-hide">
+                    <a class="link" href="/">Playmakers</a>
+                </button>
+
+                <button class="btn btn-extra btn-disable btn-hide">
+                    <a class="link" href="https://linktr.ee/utsanimationguild">Animation Guild</a>
+                </button>
+            </div>
+        </div>
         
         <div class="d-flex justify-content-center my-4">
             <div class="video-container">
